Fix alignment of quantity and cart section on all screen sizes
This accounts for the cart message

Fixes DD 71427-171

--- a/app/design/frontend/Travers/default/SomethingDigital_ReactPLP/styles/components/_listView.scss
+++ b/app/design/frontend/Travers/default/SomethingDigital_ReactPLP/styles/components/_listView.scss
@@ -1,3 +1,7 @@
+$list-image__max-width: 125px;
+$list-image__margin--mobile: 15px;
+$list-image__margin--desktop: $indent__m;
+
 .list-view {
   .product-name {
     display: block;
@@ -30,9 +34,11 @@
   }
 
   .quantity-and-cart {
-    justify-content: flex-end;
+    width: 100%;
 
     @include max-screen($screen__m) {
+      justify-content: flex-start;
+      margin-left: $list-image__max-width + $list-image__margin--mobile;
       padding-right: 0;
 
       .quantity-input {
@@ -42,10 +48,23 @@
           margin: 0;
         }
       }
+
+      .add-to-cart {
+        max-width: 110px;
+        padding-left: $indent__s;
+        padding-right: $indent__s;
+      }
     }
 
     @include min-screen($screen__m) {
       flex-wrap: wrap;
+      margin-left: $list-image__max-width + $list-image__margin--desktop + 15px;
+    }
+
+    @include min-screen($screen__l) {
+      justify-content: flex-end;
+      width: auto;
+      margin-left: 0;
     }
 
     .message {
@@ -53,6 +72,7 @@
       flex-basis: 100%;
       order: 1;
       margin-top: $indent__base;
+      margin-left: -($list-image__max-width + $list-image__margin--mobile);
       background-color: transparent;
       font-weight: $font-weight__bold;
       text-align: center;
@@ -63,14 +83,14 @@
         display: none;
       }
 
-      @include min-screen($screen__l) {
-        flex-basis: auto;
-        width: auto;
-        text-align: right;
+      @include min-screen($screen__m) {
+        margin-left: -($list-image__max-width + $list-image__margin--desktop);
       }
 
-      @include min-screen($screen__xl) {
+      @include min-screen($screen__l) {
         flex-basis: 100%;
+        width: auto;
+        text-align: right;
       }
     }
   }
@@ -100,11 +120,11 @@
 
     .list-image {
       width: 100%;
-      max-width: 125px;
-      margin-right: 15px;
+      max-width: $list-image__max-width;
+      margin-right: $list-image__margin--mobile;
 
       @include min-screen($screen__m) {
-        margin-left: $indent__m;
+        margin-left: $list-image__margin--desktop;
       }
     }
   }
